# ba_random_electron

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yml  index.html  list.yaml  main.js  package-lock.json  package.json  preload.js  vite.config.js
.github/workflows/: build-windows.yml
AI_Agent/: agent_Floating.vue.md  agent_FloatingButton.vue.md  agent_PickCount.vue.md  agent_PickResult.vue.md  agent_WebConfig.vue.md  agent_preload.js.md  agent_src-main.js.md
dist-electron/: main.js  preload.js
renderer/: app.js  index.html  pick-count.css  pick-count.html  pick-count.js  style.css
renderer/components/: AppRoot.js  FloatingButton.js
renderer/web-config/: app.js  index.html  style.css
src/: configDefaults.js  main.js  studentListText.js  tauriApi.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: admin.rs  audio.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  picker.rs  state.rs  tray.rs  update.rs  utils.rs  windows.rs
src/api/: appApi.js  audioApi.js  floatingButtonApi.js  logApi.js  pickCountApi.js  pickResultApi.js  tauriCore.js
src/components/: FloatingButton.vue
src/components/config/: ConfigTabs.vue  FloatingSettingsPanel.vue  PickSettingsPanel.vue  RuntimeLogPanel.vue  StudentImportPanel.vue  StudentManagerPanel.vue  SystemSettingsPanel.vue
src/composables/: useAppConfig.js  useConfigTabs.js  useFloatingDrag.js  useLogStream.js  usePickCountDialog.js  usePickResultDialog.js  useStudentListSync.js  useUpdateCheck.js
src/main/: main.js  tray-menu.js
src/preload/: preload.js
src/renderer/: App.vue  main.js  style.css  tauriApi.js
src/router/: index.js
src/views/: Floating.vue  PickCount.vue  PickResult.vue  WebConfig.vue
(+6 files in other folders)
