[package]
name = "blue-random"
version = "26.5.3"
description = "Blue Random"
authors = ["HydrogenRua"]
edition = "2021"

[lib]
name = "blue_random_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["tray-icon"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
