[package]
name = "kvrandom"
version = "26.5.3"
description = "KVRandom"
authors = ["HydrogenRua"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "kvrandom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.16"
rodio = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["tray-icon"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
